# matchmaker-platform

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.docker  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PHASES.md  README.md  SECURITY.md  TESTING.md  release-please-config.json
.claude/: settings.local.json
.github/workflows/: auto-version.yml  ci.yml  release-please.yml  release.yml
db/: README.md
db/migrations/: init.sql
deployments/docker/: .env.example  docker-compose.observability.yml  docker-compose.yml
deployments/docker/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  CI-CD-SETUP.md  PHASE-8-PLAN.md  TESTING.md
ops/prometheus/: prometheus.yml
scripts/: health_check.py  requirements.txt  seed_players.py  update_sdk_version.py
sdk/cpp/: CMakeLists.txt  USAGE.md
sdk/cpp/examples/: CMakeLists.txt  party_test.cpp  simple_client.cpp
sdk/cpp/include/game/: auth.hpp  client.hpp  sdk.hpp  types.hpp
sdk/cpp/src/: auth.cpp  client.cpp  sdk.cpp  websocket.cpp
sdk/cpp/tests/: CMakeLists.txt  test_main.cpp
services/api/: .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  metrics.py  requirements.txt
services/api/consumers/: match_consumer.py
services/api/middleware/: rate_limit.py
services/api/models/: schemas.py
services/api/routes/: auth.py  leaderboard.py  party.py  profile.py  session.py  websocket.py
services/api/tests/: conftest.py  test_auth_integration.py  test_auth_utils.py  test_integration.py  test_leaderboard.py  test_party.py  test_profile_integration.py  test_session.py
services/api/utils/: auth.py  database.py  dependencies.py  heartbeat_tracker.py  mmr_calculator.py  nats_client.py  nats_events.py  redis_cache.py  session_manager.py
services/client-sdk/: CMakeLists.txt  README.md
services/client-sdk/examples/: CMakeLists.txt  basic_example.cpp  full_flow_example.cpp
services/client-sdk/include/matchmaker/: auth_api.hpp  event_queue.hpp  http_client.hpp  matchmaker_client.hpp  party_api.hpp  profile_api.hpp  session_api.hpp  types.hpp  websocket_client.hpp
services/client-sdk/src/: auth_api.cpp  event_queue.cpp  http_client.cpp  matchmaker_client.cpp  party_api.cpp  profile_api.cpp  session_api.cpp  websocket_client.cpp
services/client-sdk/tests/: CMakeLists.txt  test_event_queue.cpp  test_types.cpp
services/common/: requirements.txt
services/common/infra/: __init__.py  database.py  nats_client.py  redis_client.py
services/leaderboard/: README.md
services/lobby/: README.md
services/matchmaker/: CMakeLists.txt  README.md  test_uuid_format.cpp
services/matchmaker/include/matchmaker/: matchmaker.hpp  nats_client.hpp  queue_manager.hpp  team_builder.hpp
services/matchmaker/src/: main.cpp  queue_manager.cpp  team_builder.cpp
services/matchmaker/tests/: CMakeLists.txt  test_main.cpp  test_matchmaking.cpp
services/profile/: README.md
services/session/: README.md
tests/integration/: test_api_endpoints.py
